// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FiveBookPage when got data and screen width is lower than "md" renders successfully 1`] = `
<div>
  <div>
    Mocked Page Template (
    5book
    ):
    <span>
      Name
       - 
      title
    </span>
    <div
      class="css-1alf391"
    >
      <div
        class="css-eqvws1"
      >
        <div>
          Mocked Day Link: Prev: 
          Next: 
        </div>
      </div>
      <div
        class="css-1ve8esb"
      >
        <div>
          Mocked Create Answer Card:
        </div>
      </div>
      <div
        class="css-wstn32"
      >
        <div>
          Mocked Answer Card:
        </div>
      </div>
      <div
        class="css-eqvws1"
      />
    </div>
  </div>
</div>
`;

exports[`FiveBookPage when got data and screen width is wider than "md" renders successfully 1`] = `
<div>
  <div>
    Mocked Page Template (
    5book
    ):
    <span>
      Name
       - 
      title
    </span>
    <div
      class="css-1alf391"
    >
      <div
        class="css-eqvws1"
      >
        <div>
          Mocked Day Link: Prev: 
          Next: 
        </div>
      </div>
      <div
        class="css-1ve8esb"
      >
        <div>
          Mocked Create Answer Card:
        </div>
      </div>
      <div
        class="css-wstn32"
      >
        <div>
          Mocked Answer Card:
        </div>
      </div>
      <div
        class="css-eqvws1"
      />
    </div>
  </div>
</div>
`;

exports[`FiveBookPage when got error renders successfully 1`] = `
<div>
  <div>
    Mocked Page Template (
    5book
    ):
    <span>
      Name
       - 
      title
    </span>
    <h3>
      Error: 
      I am Teapot
    </h3>
  </div>
</div>
`;
